clusters/on-prem/apps/mealie/namespace.yaml
kind: Namespace
apiVersion: v1
metadata:
  name: mealie
  labels:
    name: mealie
    goldilocks.fairwinds.com/enabled: "true"
