clusters/on-prem/apps/mealie/statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mealie
  namespace: mealie
  labels:
    app: mealie
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mealie
  serviceName: mealie
  template:
    metadata:
      labels:
        app: mealie
    spec:
      containers:
      - name: mealie
        image: hkotel/mealie:latest@sha256:c2ea6f1e7fecaa7befe6f2dd02423b5ff31c4551f5afb64576fba0e65a2a4c5b
        imagePullPolicy: Always
        resources:
          limits:
            cpu: 23m
            memory: 324M
        ports:
        - containerPort: 80
          protocol: TCP
        volumeMounts:
        - mountPath: /app/data
          name: mealie-volume
      volumes:
      - name: mealie-volume
        persistentVolumeClaim:
          claimName: mealie-data-pvc
