clusters/on-prem/apps/mealie/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mealie-service
  namespace: mealie
spec:
  selector:
    app: mealie
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 9925
      targetPort: 9000
