clusters/on-prem/apps/mealie/ingress.sops.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    name: mealie-ingress
    namespace: mealie
    annotations:
        kubernetes.io/ingress.class: traefik-external
        cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
    tls:
        - hosts:
            - ENC[AES256_GCM,data:mKpTIOyC8WVqrEZcItOCjOy62zaSSzY=,iv:4pn2QD7EFmsmUmDZIaDf+qHZDTXccU78Hz8FuS8QW0U=,tag:abw06rrreGWU6S7sOOGMig==,type:str]
          secretName: wildcard-prod-cert-tls
    rules:
        - host: ENC[AES256_GCM,data:YOY2HF37UUVuL/RhEjsUshJ5vb/+k9E=,iv:LNnR6IAkrhqMq5Dhr8x3/BygzaSRhwdyiATh/B66gZU=,tag:Tt3YQ+pGHk61WFeYUlQ5pA==,type:str]
          http:
            paths:
                - pathType: Prefix
                  path: /
                  backend:
                    service:
                        name: mealie-service
                        port:
                            number: 80
sops:
    kms: []
    gcp_kms: []
    azure_kv: []
    hc_vault: []
    age:
        - recipient: age1xl8mrtu70kvhjdl2nva6dpt8wsy3fhmz6605fmwjujc3zztyeyzqd07nvv
          enc: |
            -----BEGIN AGE ENCRYPTED FILE-----
            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBxMHIxNm8rWVRzNzRRcXc4
[...]
            pMj5PKcHjwUIOqqTgJ3TrscYQwURWZaKCr0yTUc9Zio8RQ+IgsIfcA==
            -----END AGE ENCRYPTED FILE-----
    lastmodified: "2024-03-31T13:03:41Z"
    mac: ENC[AES256_GCM,data:76pYj50cOeYpWDWMWBAlU5xY5C6l/Df5jltZ46ay6d10v7gFZ1pd3ieEum/etqg2YsXoBsfJzduHeEcQA92fDaBD/DWJtp+ps00MPRXeZdzfIoRGoHlyG69CAVh+V3CxSaJpdi0MF0va7e/mz8m1aWQwc+7VD9lz8P2oabkDuXU=,iv:mhWH/+sNsU6NZ7hdAxVq1zO12RUlCx2PvSjUSFZFbhw=,tag:uAXA0b6sWLOmQXQLHrLRUw==,type:str]
    pgp: []
    encrypted_regex: ^(data|stringData|email|dnsNames|hosts|host|externalUrl|loadBalancerIP|match)$
    version: 3.8.1
